minor formatting update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="icons" img src="images/GitHub-Mark.jpg" alt= "github icon">
         <a href="http://github.com/pdavis213">github</a> |
         <img class="icons" img src="images/email_icon.png" alt= "github icon">
-        <a href="mailto: pdavis213@gmail.com">email</a> | 
+        <a href="mailto:pdavis213@gmail.com">email</a> | 
         <img class="icons" img src="images/linkedin.png" alt= "linkedin icon">
         <a href="http://linkedin.com/pdavis213">linkedin</a> |
         <img class="insta" img src="images/instagram-logo-796x404.png" alt= "instagram icon">
@@ -55,7 +55,7 @@
     </table>
 
     <h2>Projects</h2>
-    <p>I've got a bunch in the works, so stay tuned! For now feel free to check out my <a href= "https://github.com/pdavis213/Registration_Form/blob/master/Registration_Form.html">bit of code!</a></p>
+    <p>I've got a bunch in the works, so stay tuned! For now feel free to check out my first <a href= "https://github.com/pdavis213/Registration_Form/blob/master/Registration_Form.html">bit of code!</a></p>
     <p>For info about cocktail classes, feel free to check out <a href="http://drinksbydavis.com">drinksbydavis.com</a>. Check back regularly for future updates!</p>
 
     <h2>Questions?</h2>
